--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "autoload": {
     "psr-4": {
-      "PabloPETR\\": "src/"
+      "PabloPETR\\": "src/",
+      "Test\\": "tests"
     }
   },
   "require": {
@@ -19,7 +20,8 @@
   },
   "require-dev": {
     "fakerphp/faker": "^1.19",
-    "friendsofphp/php-cs-fixer": "^3.9"
+    "friendsofphp/php-cs-fixer": "^3.9",
+    "phpunit/phpunit": "^9.5"
   },
   "scripts": {
     "check-style": "php-cs-fixer fix --diff --verbose --dry-run .",
