--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     }
   },
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.0",
+    "phpunit/phpunit": "^9.5",
+    "fakerphp/faker": "^1.19"
   },
   "require-dev": {
-    "fakerphp/faker": "^1.19",
-    "friendsofphp/php-cs-fixer": "^3.9",
-    "phpunit/phpunit": "^9.5"
+    "friendsofphp/php-cs-fixer": "^3.9"
   },
   "scripts": {
     "check-style": "php-cs-fixer fix --diff --verbose --dry-run .",
