--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require": {
     "php": ">=7.0",
     "phpunit/phpunit": "^9.5",
-    "fakerphp/faker": "^1.19"
+    "fakerphp/faker": "^1.19",
+    "ext-json": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.9"
