--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,8 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
+      - name: Composer install all need packages
+        run: composer install
+      
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
       
       - name: Run unit tests
-        run: vendor/bin/phpunit .
+        run: composer run test
